Added weather based icons using conditional statement

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+body {
+  margin: 0;
+  padding: 0;
+  background-image: url('images/fullpage-bg.png'); /* Adjust path if needed */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+   min-height: 100dvh;
+}
